<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            layout="@layout/toolbar_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/header"
            style="@style/Text.H1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/choose_ticket_text"
            android:visibility="invisible" />

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

            <Button
                android:id="@+id/enterButton"
                style="@style/AppTheme.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/btn_enter_transport"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/exitButton" />


            <pl.droidsonroids.gif.GifImageView
                android:id="@+id/coreImage"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="8dp"
                android:src="@drawable/g_coin_sales"
                app:layout_constraintEnd_toStartOf="@+id/exitButton"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/enterButton"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/exitButton"
                style="@style/AppTheme.Button.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="0"
                android:gravity="center"
                android:text="@string/btn_exit_transport"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/enterButton"
                app:layout_constraintVertical_bias="0.0" />

            <com.sdimdev.nnhackaton.presentation.view.game.CoinBox
                android:id="@+id/coinBox"
                android:layout_width="395dp"
                android:layout_height="14dp"
                android:adjustViewBounds="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="8dp"
                app:layout_constraintBottom_toTopOf="@id/coreImage"></com.sdimdev.nnhackaton.presentation.view.game.CoinBox>

            <TextView
                android:id="@+id/balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/coreImage"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>
    </LinearLayout>
</ScrollView>